--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <a routerLink="/">apptitle</a>
+    <a routerLink="/">Ruby H. Kohn</a>
     <nav>
       <ul>
         <li><a routerLink="/">Home</a></li>
