--- a/rubykohn/src/app/app.component.html
+++ b/rubykohn/src/app/app.component.html
@@ -1,11 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    root component
-  </h1>
-
   <app-nav></app-nav>
-
+  <br/><br/>
   <section>
     <router-outlet></router-outlet>
   </section>
+  <app-footer></app-footer>
