--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -1,8 +1,9 @@
 <header>
-  <div class="container">
-    <a routerLink="/">Ruby H. Kohn</a>
+<div class="nav-container">
+    
     <nav>
       <ul>
+        <li><a routerLink="/">Ruby H. Kohn</a></li>
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/research">Research</a></li>
         <li><a routerLink="/contact">Contact us</a></li>
