--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -1,12 +1,11 @@
 <header>
-<div class="nav-container">
-    
+  <div class="nav-container">
     <nav>
       <ul>
-        <li><a routerLink="/">Ruby H. Kohn</a></li>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/research">Research</a></li>
-        <li><a routerLink="/contact">Contact us</a></li>
+        <li style="float:left"><a routerLink="/">Ruby H. Kohn</a></li>
+        <li style="float:right"><a routerLink="/contact">Contact us</a></li>
+        <li style="float:right"><a routerLink="/research">Research</a></li>
+        <li style="float:right"><a routerLink="/">Home</a></li>
       </ul>
     </nav>
   </div>
