--- a/rubykohn/src/app/footer/footer.component.html
+++ b/rubykohn/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+<footer class="footer-container">
+  <div>Copyright 2019 Ruby H. Kohn | All Rights Reserved</div>
+</footer>
