--- a/rubykohn/src/app/research/research.component.html
+++ b/rubykohn/src/app/research/research.component.html
@@ -1,4 +1,15 @@
-<h1>Research</h1>
+<h1>Honors Thesis</h1>
+
+<p>
+  Research
+</p>
+
+<h1>Other Undergrad Research</h1>
+
+<h3>NSF Funded Research Experience for Undergrads (REU)</h3>
+<h3>Smith College Lab Assistant</h3>
+<h3>Summer Fellowship</h3>
+<h3>Mushroom Mycellium Project</h3>
 
 <p>
   Research
