--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <nav>
       <ul>
         <li style="float:left"><a routerLink="/">Ruby H. Kohn</a></li>
-        <li style="float:right"><a routerLink="/contact">Contact us</a></li>
+        <li style="float:right"><a routerLink="/contact">Contact</a></li>
         <li style="float:right"><a routerLink="/research">Research</a></li>
         <li style="float:right"><a routerLink="/">Home</a></li>
       </ul>
