--- a/rubykohn/src/app/home/home.component.html
+++ b/rubykohn/src/app/home/home.component.html
@@ -1,5 +1,23 @@
 <h1>About</h1>
 
-<p>
-  I am a senior at Smith College currently finishing up my B.S. in Engineering.
-</p>
+<div id="home-container">
+  <p>
+    I am a senior at Smith College currently finishing up my B.S. in
+    Engineering.
+  </p>
+  <p>
+    My research experience predominantly concerns clean water engineering. I
+    have worked as a research assistant in the Ismail Lab at Smith college for
+    the last two years. This lab utilizes zooplankton as a filter of microbial
+    pollutants.
+  </p>
+  <p>
+    My engineering interests aren’t solely related to water. This past summer
+    (2018) I had the opportunity to work at the Technical University in
+    Darmstadt, Germany on infrastructural engineering related to electric
+    vehicles.
+  </p>
+  <p>
+    Please feel free to contact me for job opportunities or otherwise. 
+  </p>
+</div>
