--- a/rubykohn/src/app/home/home.component.css
+++ b/rubykohn/src/app/home/home.component.css
@@ -1,3 +1,5 @@
-.home-container {
-    position: relative;
+#home-container {
+    text-align:center;
+    margin-left:20%;
+    margin-right:20%;
 }
