--- a/rubykohn/src/app/nav/nav.component.css
+++ b/rubykohn/src/app/nav/nav.component.css
@@ -16,7 +16,8 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #111;
+  background-color: #f9da10;
+  
 }
 
 .active {
