--- a/rubykohn/src/app/home/home.component.html
+++ b/rubykohn/src/app/home/home.component.html
@@ -1,6 +1,10 @@
 <h1>About</h1>
 
-<div id="home-container">
+<div>
+    <img src="photo">
+</div>
+
+<div id="home-text">
   <p>
     I am a senior at Smith College currently finishing up my B.S. in
     Engineering.
