--- a/rubykohn/src/app/home/home.component.css
+++ b/rubykohn/src/app/home/home.component.css
@@ -1,5 +1,11 @@
-#home-container {
+#home-text {
     text-align:center;
     margin-left:20%;
     margin-right:20%;
+}
+
+
+img {
+    width:50%;
+
 }
