--- a/rubykohn/src/app/home/home.component.html
+++ b/rubykohn/src/app/home/home.component.html
@@ -1,8 +1,6 @@
 <h1>About</h1>
 
-<div>
-    <img src="photo">
-</div>
+<img src="../../assets/KOHN.JPG" />
 
 <div id="home-text">
   <p>
@@ -22,6 +20,6 @@
     vehicles.
   </p>
   <p>
-    Please feel free to contact me for job opportunities or otherwise. 
+    Please feel free to contact me for job opportunities or otherwise.
   </p>
 </div>
