--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -2,6 +2,7 @@
   <div class="nav-container">
     <nav>
       <ul>
+          <li style="float:left"><img src="../../assets/whitehat.png"/></li>
         <li style="float:left"><a routerLink="/">Ruby H. Kohn</a></li>
         <li style="float:right"><a routerLink="/contact">Contact</a></li>
         <li style="float:right"><a routerLink="/research">Research</a></li>
