--- a/rubykohn/src/app/app.component.html
+++ b/rubykohn/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <app-nav></app-nav>
-  <br/><br/>
+  <br /><br />
   <section>
     <router-outlet></router-outlet>
   </section>
-  <br/><br/>
+  <br /><br />
   <app-footer></app-footer>
+</div>
