--- a/rubykohn/src/app/nav/nav.component.css
+++ b/rubykohn/src/app/nav/nav.component.css
@@ -17,6 +17,7 @@ li a {
 /* Change the link color to #111 (black) on hover */
 li a:hover {
   background-color: #f9da10;
+  color:#000;
   
 }
 
@@ -29,4 +30,12 @@ li a:hover {
   top: 0;
   left: 0;
   width: 100%;
+}
+
+img{
+  width:25px;
+  margin-top:10px;
+  margin-left: 20px;
+  margin-right: 15px;
+
 }
