--- a/rubykohn/src/app/research/research.component.html
+++ b/rubykohn/src/app/research/research.component.html
@@ -1,3 +1,6 @@
+
+
+
 <h1>Honors Thesis</h1>
 
 <p>
@@ -14,3 +17,5 @@
 <p>
   Research
 </p>
+
+<a href="../../assets/KohnResume.pdf" download>Download Complete Resume</a>
