--- a/rubykohn/src/app/research/research.component.html
+++ b/rubykohn/src/app/research/research.component.html
@@ -1,19 +1,66 @@
+<br /><br />
+<h1><span class="major-header">&nbsp;&nbsp;&nbsp;Honors Thesis&nbsp;&nbsp;&nbsp;</span></h1>
+
+<div>
+
+  <ul>
+    <li>Institution: Smith College</li>
+    <li>Dates: September 2018 - May 2019</li>
+    <li>Lab: Ismail Lab</li>
+    <li>Tentative Title: </li>
+    <li>Tentative Description: </li>
+    <li>Final Paper Download: Currently Unavailable</li>
+  </ul>
+</div>
+
+
+<h1><span class="major-header">&nbsp;&nbsp;&nbsp; Other Undergrad Research&nbsp;&nbsp;&nbsp;</span></h1>
 
 
 
-<h1>Honors Thesis</h1>
+<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; NSF Funded Research Experience for Undergrads (REU)&nbsp;&nbsp;&nbsp;</span></h3>
+<div>
 
-<p>
-  Research
-</p>
+  <ul>
+    <li>Institution: Smith College</li>
+    <li>Dates: </li>
+    <li>Lab: </li>
+    <li>Description of Work: </li>
+    <li>Final Paper Download: Currently Unavailable</li>
+  </ul>
+</div>
 
-<h1>Other Undergrad Research</h1>
+<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Ismail Lab Assistant&nbsp;&nbsp;&nbsp;</span></h3>
+<div>
 
-<h3>NSF Funded Research Experience for Undergrads (REU)</h3>
-<h3>Smith College Lab Assistant</h3>
-<h3>Summer Fellowship</h3>
-<h3>Mushroom Mycellium Project</h3>
+  <ul>
+    <li>Institution: Smith College</li>
+    <li>Dates: </li>
+    <li>Lab: </li>
+    <li>Description of Work: </li>
+    <li>Final Paper Download: Currently Unavailable</li>
+  </ul>
+</div>
 
-<p>
-  Research
-</p>
+<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Smith College Summer Fellowship &nbsp;&nbsp;&nbsp;</span></h3>
+<div>
+
+  <ul>
+    <li>Institution: Smith College</li>
+    <li>Dates: </li>
+    <li>Lab: </li>
+    <li>Description of Work: </li>
+    <li>Final Paper Download: Currently Unavailable</li>
+  </ul>
+</div>
+<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Mushroom Mycellium Project&nbsp;&nbsp;&nbsp;</span></h3>
+<div>
+
+  <ul>
+    <li>Institution: Smith College</li>
+    <li>Dates: </li>
+    <li>Lab: </li>
+    <li>Description of Work: </li>
+    <li>Final Paper Download: Currently Unavailable</li>
+  </ul>
+</div>
