--- a/rubykohn/src/app/home/home.component.html
+++ b/rubykohn/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-
-<br/><br/>
+<br /><br />
 <img src="../../assets/KOHN.JPG" />
 
 <div id="home-text">
@@ -9,7 +8,8 @@
   </p>
   <p>
     My research experience predominantly concerns clean water engineering. I
-    have worked as a research assistant in the <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a>at Smith college for
+    have worked as a research assistant in the <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a>at Smith
+    college for
     the last two years. This lab utilizes zooplankton as a filter of microbial
     pollutants.
   </p>
@@ -17,7 +17,7 @@
     My engineering interests aren’t solely related to water. This past summer
     (2018) I had the opportunity to work at the Technical University in
     Darmstadt, Germany on infrastructural engineering related to electric
-    vehicles. See my research page for a full list of my research with descriptions and links. 
+    vehicles. See my research page for a full list of my research with descriptions, diagrams, and links.
   </p>
   <p>
     Please feel free to contact me for job opportunities or otherwise.
