--- a/rubykohn/src/app/research/research.component.html
+++ b/rubykohn/src/app/research/research.component.html
@@ -1,66 +1,85 @@
 <br /><br />
-<h1><span class="major-header">&nbsp;&nbsp;&nbsp;Honors Thesis&nbsp;&nbsp;&nbsp;</span></h1>
+<!-- Honors Thesis Portion -->
+<div class="research-card">
+  <h1>Honors Thesis</h1>
+  <img src="../../assets/smithlogo.png" />
+  <div class="inner-text">
+    <ul>
+      <li><u>Dates:</u>&nbsp;&nbsp; September 2018 - May 2019</li>
+      <li><u>Lab:</u>&nbsp;&nbsp; <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a></li>
+      <li><u>Tentative Title:</u>&nbsp;&nbsp; </li>
+      <li><u>Tentative Description:</u>&nbsp;&nbsp; </li>
+      <li><a>Download Paper </a></li>
+    </ul>
+  </div>
+  <br />
+</div>
 
-<div>
+<br /><br />
 
-  <ul>
-    <li>Institution: Smith College</li>
-    <li>Dates: September 2018 - May 2019</li>
-    <li>Lab: Ismail Lab</li>
-    <li>Tentative Title: </li>
-    <li>Tentative Description: </li>
-    <li>Final Paper Download: Currently Unavailable</li>
-  </ul>
+<div class="research-card">
+  <h1>NSF Funded Research Experience for Undergrads (REU)</h1>
+  <img src="../../assets/tudlogo.png" />
+  <div class="inner-text">
+    <ul>
+      <li><u>Dates:</u>&nbsp;&nbsp;June - August 2018</li>
+      <li><u>Lab: <a href="https://www.fzd.tu-darmstadt.de/internationaleraustausch/automotiveengineeringsummer/automotiveengineeringsummergermany.en.jsp">
+            Institute of Automotive Engineering</a>
+        </u>&nbsp;&nbsp; </li>
+      <li><u>Description:</u>&nbsp;&nbsp; </li>
+      <li><a>Download Paper </a></li>
+    </ul>
+  </div>
+  <br />
+</div>
+
+<br /><br />
+
+<div class="research-card">
+  <h1>Ismail Lab Assistant</h1>
+  <img src="../../assets/smithlogo.png" />
+  <div class="inner-text">
+    <ul>
+      <li><u>Dates:</u>&nbsp;&nbsp; February 2017 - Present</li>
+      <li><u>Lab:</u>&nbsp;&nbsp; <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a></li>
+      <li><u>Description:</u>&nbsp;&nbsp; </li>
+      <li><a>Download Paper </a></li>
+    </ul>
+  </div>
+  <br />
 </div>
 
 
-<h1><span class="major-header">&nbsp;&nbsp;&nbsp; Other Undergrad Research&nbsp;&nbsp;&nbsp;</span></h1>
+<br /><br />
 
-
-
-<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; NSF Funded Research Experience for Undergrads (REU)&nbsp;&nbsp;&nbsp;</span></h3>
-<div>
-
-  <ul>
-    <li>Institution: Smith College</li>
-    <li>Dates: </li>
-    <li>Lab: </li>
-    <li>Description of Work: </li>
-    <li>Final Paper Download: Currently Unavailable</li>
-  </ul>
+<div class="research-card">
+  <h1>Summer Undergraduate Research Fellowship</h1>
+  <img src="../../assets/smithlogo.png" />
+  <div class="inner-text">
+    <ul>
+      <li><u>Dates:</u>&nbsp;&nbsp; May - July 2017</li>
+      <li><u>Description:</u>&nbsp;&nbsp; </li>
+      <li><a>Download Paper </a></li>
+    </ul>
+  </div>
+  <br />
 </div>
 
-<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Ismail Lab Assistant&nbsp;&nbsp;&nbsp;</span></h3>
-<div>
 
-  <ul>
-    <li>Institution: Smith College</li>
-    <li>Dates: </li>
-    <li>Lab: </li>
-    <li>Description of Work: </li>
-    <li>Final Paper Download: Currently Unavailable</li>
-  </ul>
+<br /><br />
+
+<div class="research-card">
+  <h1> Mushroom Mycellium Project</h1>
+  <img src="../../assets/smithlogo.png" />
+  <div class="inner-text">
+    <ul>
+      <li><u>Dates:</u>&nbsp;&nbsp; September - December 2017</li>
+      <li><u>Description:</u>&nbsp;&nbsp; </li>
+      <li><a>Download Paper </a></li>
+    </ul>
+  </div>
+  <br />
 </div>
 
-<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Smith College Summer Fellowship &nbsp;&nbsp;&nbsp;</span></h3>
-<div>
 
-  <ul>
-    <li>Institution: Smith College</li>
-    <li>Dates: </li>
-    <li>Lab: </li>
-    <li>Description of Work: </li>
-    <li>Final Paper Download: Currently Unavailable</li>
-  </ul>
-</div>
-<h3><span class="minor-header">&nbsp;&nbsp;&nbsp; Mushroom Mycellium Project&nbsp;&nbsp;&nbsp;</span></h3>
-<div>
-
-  <ul>
-    <li>Institution: Smith College</li>
-    <li>Dates: </li>
-    <li>Lab: </li>
-    <li>Description of Work: </li>
-    <li>Final Paper Download: Currently Unavailable</li>
-  </ul>
-</div>
+<br />
