--- a/rubykohn/src/app/contact/contact.component.html
+++ b/rubykohn/src/app/contact/contact.component.html
@@ -1,5 +1,30 @@
 <h1>Contact</h1>
+<br /><br />
+<form>
+
+  <!-- name -->
+  <div class="field">
+    <input id = "my-input" type="text" name="name" class="input" placeholder="Your Name">
+  </div>
+  <br/>
+  <!-- email -->
+  <div class="field">
+    <input id = "my-input" type="email" name="email" class="input" placeholder="Your Email">
+  </div>
+  <br/>
+  <!-- message -->
+  <div class="field">
+    <textarea id="my-text" class="textarea" name="message" placeholder="What's on your mind?"></textarea>
+  </div>
+  <br/>
+  <button type="submit" id="my-button" class="button is-danger is-large">Submit</button>
+
+</form>
+<br /><br />
 
 <p>
   rubykohnsite @ gmail [dot] com
 </p>
+
+
+
