--- a/rubykohn/src/app/contact/contact.component.html
+++ b/rubykohn/src/app/contact/contact.component.html
@@ -1,20 +1,20 @@
 <h1>Contact</h1>
 <br /><br />
-<form>
+<form (ngSubmit)="processForm()">
 
   <!-- name -->
   <div class="field">
-    <input id = "my-input" type="text" name="name" class="input" placeholder="Your Name">
+    <input id = "my-input" type="text" name="name" class="input" placeholder="Your Name" [(ngModel)]="name">
   </div>
   <br/>
   <!-- email -->
   <div class="field">
-    <input id = "my-input" type="email" name="email" class="input" placeholder="Your Email">
+    <input id = "my-input" type="email" name="email" class="input" placeholder="Your Email" [(ngModel)]="email">
   </div>
   <br/>
   <!-- message -->
   <div class="field">
-    <textarea id="my-text" class="textarea" name="message" placeholder="What's on your mind?"></textarea>
+    <textarea id="my-text" class="textarea" name="message" placeholder="What's on your mind?" [(ngModel)]="message"></textarea>
   </div>
   <br/>
   <button type="submit" id="my-button" class="button is-danger is-large">Submit</button>
