--- a/rubykohn/src/app/home/home.component.css
+++ b/rubykohn/src/app/home/home.component.css
@@ -1,7 +1,6 @@
 #home-text {
-    text-align:center;
+    text-align:left ;
     margin-left:20%;
-    margin-right:20%;
 }
 
 #home-img {
@@ -12,4 +11,13 @@ img {
     width:20%;
     border: 1px solid black;
     min-width: 300px;
+    float:left;
+    margin-right:20px;
+}
+
+
+#home-container{
+    margin-left:15%;
+    margin-right: 15%;
+    align-content: center
 }
