--- a/rubykohn/src/app/home/home.component.html
+++ b/rubykohn/src/app/home/home.component.html
@@ -1,25 +1,20 @@
 <br /><br />
-<img src="../../assets/KOHN.JPG" />
+<div id="home-container">
+  <img src="../../assets/picture_about.jpg"/>
 
-<div id="home-text">
-  <p>
-    I am a senior at Smith College currently finishing up my B.S. in
-    Engineering.
-  </p>
-  <p>
-    My research experience predominantly concerns clean water engineering. I
-    have worked as a research assistant in the <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a>at Smith
-    college for
-    the last two years. This lab utilizes zooplankton as a filter of microbial
-    pollutants.
-  </p>
-  <p>
-    My engineering interests aren’t solely related to water. This past summer
-    (2018) I had the opportunity to work at the Technical University in
-    Darmstadt, Germany on infrastructural engineering related to electric
-    vehicles. See my research page for a full list of my research with descriptions, diagrams, and links.
-  </p>
-  <p>
-    Please feel free to contact me for job opportunities or otherwise.
-  </p>
+  <div id="home-text">
+    <p>
+      I am a senior at Smith College who will graduate with a B.S. in
+      Engineering Science in May. I am passionate about applications of
+      engineering that benefit people and the environment. My education and
+      research experiences in both environmental and mechatronic engineering
+      have made me a resourceful and resilient engineer who takes an
+      interdisciplinary approach when solving problems. See my projects page for
+      a full list of my research and design experiences.
+    </p>
+    <p>
+      Feel free to contact me with job opportunities or otherwise at
+      rkohn@smith.edu.
+    </p>
+  </div>
 </div>
