--- a/rubykohn/src/app/nav/nav.component.html
+++ b/rubykohn/src/app/nav/nav.component.html
@@ -5,9 +5,8 @@
         <li style="float:left"><img src="../../assets/yellowhat.png" /></li>
         <li style="float:left"><a routerLink="/">Ruby H. Kohn</a></li>
         <li style="float:right"><a href="../../assets/KohnResume.pdf" download>Download Resume</a></li>
-        <li style="float:right"><a routerLink="/contact">Contact</a></li>
         <li style="float:right"><a routerLink="/research">Research</a></li>
-        <li style="float:right"><a routerLink="/">Home</a></li>
+        <li style="float:right"><a routerLink="/">About</a></li>
       </ul>
     </nav>
   </div>
