--- a/rubykohn/src/app/footer/footer.component.html
+++ b/rubykohn/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="footer-container">
   <div id="footer-nav">
-      <a routerLink="/">Home</a>&nbsp;|&nbsp;
+      <a routerLink="/">About</a>&nbsp;|&nbsp;
       <a routerLink="/research">Research</a>&nbsp;|&nbsp;
-      <a routerLink="/contact">Contact</a>
+      <a href="../../assets/KohnResume.pdf" download>Download Resume</a>
   </div>
   <div id="copyright">Copyright 2019 Ruby H. Kohn | All Rights Reserved</div>
 </footer>
