--- a/rubykohn/src/app/footer/footer.component.html
+++ b/rubykohn/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer-container">
   <div id="footer-nav">
       <a routerLink="/">About</a>&nbsp;|&nbsp;
-      <a routerLink="/research">Research</a>&nbsp;|&nbsp;
+      <a routerLink="/projects">Projects</a>&nbsp;|&nbsp;
       <a href="../../assets/KohnResume.pdf" download>Download Resume</a>
   </div>
   <div id="copyright">Copyright 2019 Ruby H. Kohn | All Rights Reserved</div>
