--- a/rubykohn/src/app/research/research.component.html
+++ b/rubykohn/src/app/research/research.component.html
@@ -1,16 +1,28 @@
 <br /><br />
 <!-- Honors Thesis Portion -->
 <div class="research-card">
-  <h1>Honors Thesis</h1>
+  <h1>Full Year Honors Thesis</h1>
+  <h4>Design of Microcosms for Testing of Contaminant Removal</h4>
   <img src="../../assets/smithlogo.png" />
-  <div class="inner-text">
-    <ul>
-      <li><u>Dates:</u>&nbsp;&nbsp; September 2018 - May 2019</li>
-      <li><u>Lab:</u>&nbsp;&nbsp; <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a></li>
-      <li><u>Tentative Title:</u>&nbsp;&nbsp; </li>
-      <li><u>Tentative Description:</u>&nbsp;&nbsp; </li>
-      <li><a>Download Paper </a></li>
-    </ul>
+  <br />
+  <div>
+    <p><b>Dates:&nbsp;</b> September 2018 – May 2019</p>
+    <p>
+      <b>Lab:&nbsp;</b>
+      <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a>
+    </p>
+    <p>
+      <b>Description:&nbsp;</b> I am designing and building flow-through
+      microcosm tanks that model engineered treatment wetlands to study the
+      long-term filter feeding behavior of zooplankton in natural systems. I am
+      generating designs based on previous zooplankton and treatment wetlands
+      research as well as chemical reactor theory and fluid mechanics. To verify
+      design requirements, I am using tracer studies, analysis of flow regime,
+      viability studies, and initial microcosm experiments. The results of
+      microcosm experiments will help inform treatment wetland engineers about
+      the capacity of zooplankton to treat microbial contaminants like E. coli
+      and the ideal conditions for treatment.
+    </p>
   </div>
   <br />
 </div>
@@ -18,17 +30,34 @@
 <br /><br />
 
 <div class="research-card">
-  <h1>NSF Funded Research Experience for Undergrads (REU)</h1>
-  <img src="../../assets/tudlogo.png" />
-  <div class="inner-text">
-    <ul>
-      <li><u>Dates:</u>&nbsp;&nbsp;June - August 2018</li>
-      <li><u>Lab: <a href="https://www.fzd.tu-darmstadt.de/internationaleraustausch/automotiveengineeringsummer/automotiveengineeringsummergermany.en.jsp">
-            Institute of Automotive Engineering</a>
-        </u>&nbsp;&nbsp; </li>
-      <li><u>Description:</u>&nbsp;&nbsp; </li>
-      <li><a>Download Paper </a></li>
-    </ul>
+  <h1>NSF Funded Research Experience for Undergraduates (REU)</h1>
+  <img style="width:100px" src="../../assets/VT_logo.png" />
+  <img style="width:130px" src="../../assets/tudlogo.png" />
+  <br />
+  <br />
+  <br />
+  <br />
+  <div>
+    <p><b>Dates:&nbsp;</b>June – August 2018</p>
+    <p>
+      <b>Lab:&nbsp;</b
+      ><a
+        href="https://www.ims.tu-darmstadt.de/institut/startseite_ims/index.en.jsp"
+      >
+        Institute for Mechatronic Systems
+      </a>
+    </p>
+    <p>
+      <b>Description:&nbsp;</b>While in Germany, I created a model of charging
+      infrastructure for electric vehicles in residential complexes based on
+      driver habits and charger scenarios using MATLAB. During this project I
+      became familiar with object oriented programming in MATLAB, as well as
+      data analysis and visualization techniques. I optimized the model to
+      significantly reduce the energy consumption of an outdated housing complex
+      being refurbished with a smart grid controller. I directed the research
+      and design of the model independently in collaboration with a graduate
+      mentor.
+    </p>
   </div>
   <br />
 </div>
@@ -36,50 +65,72 @@
 <br /><br />
 
 <div class="research-card">
-  <h1>Ismail Lab Assistant</h1>
+  <h1>Environmental Engineering Research Assistant</h1>
   <img src="../../assets/smithlogo.png" />
-  <div class="inner-text">
-    <ul>
-      <li><u>Dates:</u>&nbsp;&nbsp; February 2017 - Present</li>
-      <li><u>Lab:</u>&nbsp;&nbsp; <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a></li>
-      <li><u>Description:</u>&nbsp;&nbsp; </li>
-      <li><a>Download Paper </a></li>
-    </ul>
+  <br />
+  <div>
+    <p><b>Dates:&nbsp;</b>February 2017 - May 2019</p>
+    <p>
+      <b>Lab:&nbsp;</b>
+      <a href="http://www.science.smith.edu/ismail/">Ismail Lab </a>
+    </p>
+    <p>
+      <b>Description:&nbsp;</b> In my role as research assistant I have designed
+      and implemented original experiments with a team assessing the ability of
+      zooplankton to filter E. coli from aquatic systems under varied
+      environmental conditions. I am continuing this research through my honors
+      thesis, building flow-through microcosm tanks that model engineered
+      treatment wetlands to study the long-term filter feeding behavior of
+      zooplankton in natural systems. I was awarded an undergraduate summer
+      research fellowship in 2017; I collected water quality data of a stream
+      running through a cattle pasture at the Smith College field station to
+      asses diurnal impact and geographic correlation of fecal contamination,
+      informing rechanneling of the stream. I took a leadership position by
+      coordinating laboratory upkeep, maintaining organism cultures, and
+      training new research assistants.
+    </p>
   </div>
   <br />
 </div>
-
 
 <br /><br />
 
 <div class="research-card">
-  <h1>Summer Undergraduate Research Fellowship</h1>
-  <img src="../../assets/smithlogo.png" />
-  <div class="inner-text">
-    <ul>
-      <li><u>Dates:</u>&nbsp;&nbsp; May - July 2017</li>
-      <li><u>Description:</u>&nbsp;&nbsp; </li>
-      <li><a>Download Paper </a></li>
-    </ul>
+  <h1>Controlled Flight Aerial Vehicle Design Project</h1>
+  <div>
+    <p><b>Dates:&nbsp;</b>January – May 2019</p>
+    <p><b>Course:&nbsp;</b>Aerial Vehicle Design</p>
+    <p>
+      <b>Description:&nbsp;</b>I am designing and fabricating a small glider
+      capable of controlled flight with the goal of staying in the air as long
+      as possible. I am soldering chosen components onto a PCB, programming a
+      microcontroller using Propeller Tool to control glider components during
+      flight, and effectively debugging both hardware and software issues. After
+      the glider and controls have been completed, I will conduct flight tests,
+      record pressure sensor data, and iterate the design to optimize the glide
+      ratio and flight time.
+    </p>
   </div>
   <br />
 </div>
-
 
 <br /><br />
 
 <div class="research-card">
-  <h1> Mushroom Mycellium Project</h1>
-  <img src="../../assets/smithlogo.png" />
-  <div class="inner-text">
-    <ul>
-      <li><u>Dates:</u>&nbsp;&nbsp; September - December 2017</li>
-      <li><u>Description:</u>&nbsp;&nbsp; </li>
-      <li><a>Download Paper </a></li>
-    </ul>
+  <h1>Removal of Lead by Mushroom Mycelium</h1>
+  <div>
+    <p><b>Dates:&nbsp;</b>September - December 2017</p>
+    <p><b>Course:&nbsp;</b> Contaminants in Aquatic Systems</p>
+    <p>
+      <b>Description:&nbsp;</b>I designed an experiment with a partner measuring
+      the sorbtion of lead from water by powdered mycelium in collaboration with
+      a local farmer to develop a productive use for mushroom mycelium waste.
+      Performed batch experiments, collected data using a microwave digestor and
+      ICP-OES, and evaluated sorbtion favorability using the Freundlich isotherm
+      model.
+    </p>
   </div>
   <br />
 </div>
-
 
 <br />
